--- a/ch6_page/index.html
+++ b/ch6_page/index.html
@@ -7,6 +7,6 @@
   <body>
     <main id="js-main" class="main"></main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.2.0/require.min.js"></script>
-    <script src="main.js"></script>
+    <script src="/_ch6/main.js"></script>
   </body>
 </html>
